# pipelinecore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: INSTALLATION_GUIDE.md  README.md  README.zh-TW.md
scripts/: deploy.sh
src/pipelinecore/: __init__.py
src/pipelinecore/core/: __init__.py  base.py  protocol.py  timing.py
src/pipelinecore/dicomseg/: base.py
src/pipelinecore/dicomseg/builder/: base.py
src/pipelinecore/dicomseg/schema/: base.py  enum.py  typing.py
src/pipelinecore/dicomseg/utils/: __init__.py  base.py
src/pipelinecore/inference/: __init__.py  base.py  config.py  schema.py
src/pipelinecore/resample/: __init__.py
src/pipelinecore/upload/: __init__.py  orthanc_dicom.py  platform_json.py
src/pipelinecore/volume/: __init__.py  alignment.py  geometry.py  intensity.py  io.py  utils.py  validation.py  volume_utils.py
tests/: conftest.py  test_resource.py  verify_package.py
tests/core/: test_base.py
tests/resample/: test_resample.py
tests/upload/: test_upload_init.py
