[project]
name = "pipelinecore"
version = "0.1.9"
description = "A Python framework for building ML/inference pipelines with GPU resource management and TensorFlow integration"
readme = "docs/README.md"
authors = [
    { name = "user", email = "a03440@tmu.edu.tw" }
]
requires-python = ">=3.10"
keywords = ["pipeline", "ml", "gpu", "tensorflow", "inference", "machine-learning"]
license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "pynvml>=11.0.0",
    "orjson>=3.11.4",
    "pydicom-seg>=0.4.1",
    "pydicom==2.4.3",
    "pyorthanc>=1.22.1",
    "pydantic<2.11",
]

[project.optional-dependencies]
tensorflow = [
    "tensorflow>=2.10.0",
]
pytorch = [
    "torch>=2.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.11.5",
    "pre-commit>=3.5.0",
]

[project.scripts]
pipelinecore = "pipelinecore:main"

[project.urls]
Homepage = "https://github.com/ggggggg13289AI/pipelinecore"
Repository = "https://github.com/ggggggg13289AI/pipelinecore"
Documentation = "https://github.com/ggggggg13289AI/pipelinecore/blob/main/docs/README.md"
"Issue Tracker" = "https://github.com/ggggggg13289AI/pipelinecore/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["docs/README.md", "/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pipelinecore"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.11.5",
    "pre-commit>=3.5.0",
]

test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

linting = [
    "ruff>=0.11.5",
    "mypy>=1.8.0",
    "types-tensorflow",
]

docs = [
    "sphinx>=7.1.2",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "RET", # flake8-return
    "SIM", # flake8-simplify
]

lint.ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pipelinecore"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
show_error_codes = true

[[tool.mypy.overrides]]
module = "pynvml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorflow.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/pipelinecore",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/pipelinecore"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
